<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.jose.ltr-jaxrs-groovy</groupId>
	<artifactId>ltr-jaxrs-groovy</artifactId>
	<packaging>war</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>lrt - JAX-RS - Groovy</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

		<mainClass>org.jose.jaxrs.server.EmbeddedServer</mainClass>

		<jetty.version>9.4.12.v20180830</jetty.version>
		<jdk.version>1.8</jdk.version>
		<jersey.version>2.27</jersey.version>
		<slf4j.version>1.7.25</slf4j.version>
		<groovy.version>2.5.2</groovy.version>
		<commonmark.version>0.11.0</commonmark.version>
		<cucumber.version>4.0.0</cucumber.version>

	</properties>

	<dependencies>

		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.2.11</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>2.2.11</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.2.11</version>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-server</artifactId>
			<version>${jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-jetty-http</artifactId>
			<version>${jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-servlet-core</artifactId>
			<version>${jersey.version}</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-jetty-servlet</artifactId>
			<version>${jersey.version}</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>${jersey.version}</version>
		</dependency>
		<dependency>
    	<groupId>org.glassfish.jersey.inject</groupId>
    	<artifactId>jersey-hk2</artifactId>
			<version>${jersey.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
		<dependency>
				<groupId>org.codehaus.groovy</groupId>
				<artifactId>groovy-all</artifactId>
				<version>${groovy.version}</version>
				<type>pom</type>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.javamoney/moneta -->
		<dependency>
		    <groupId>org.javamoney</groupId>
		    <artifactId>moneta</artifactId>
		    <version>1.3</version>
		    <type>pom</type>
		</dependency>

		<!-- cucumber dependencies -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
		</dependency>

		<!-- cucumber-junit dependencies -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
		</dependency>

		<!-- cucumber-guice dependencies -->
		<dependency>
		    <groupId>io.cucumber</groupId>
				<artifactId>cucumber-guice</artifactId>
		    <version>${cucumber.version}</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
		<dependency>
		    <groupId>com.google.inject</groupId>
		    <artifactId>guice</artifactId>
		    <version>4.2.1</version>
		</dependency>

		<!-- junit dependencies -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>[4.12,)</version>
			<scope>test</scope>
		</dependency>

		<!-- rest-assured -->
    <dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>rest-assured</artifactId>
			<version>[3.1.0,)</version>
      <scope>test</scope>
    </dependency>

		<!-- jetty server -->
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-servlet</artifactId>
			<version>${jetty.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
    	<artifactId>jetty-util</artifactId>
			<version>${jetty.version}</version>
		</dependency>

		<!-- com.atlassian.commonmark -->
		<dependency>
			<groupId>com.atlassian.commonmark</groupId>
			<artifactId>commonmark</artifactId>
			<version>${commonmark.version}</version>
		</dependency>


	</dependencies>

	<build>
		<finalName>ltr-jaxrs-groovy</finalName>

		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>src/main/webapp</directory>
			</resource>
		</resources>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<compilerArgument>-Xlint:deprecation</compilerArgument>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.2.2</version>
			</plugin>

			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>${jetty.version}</version>
				<configuration>
					<httpConnector>
						<port>8680</port>
					</httpConnector>
					<scanIntervalSeconds>5000</scanIntervalSeconds>
				</configuration>
			</plugin>

			<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <version>2.22.0</version>
		    <dependencies>
		      <dependency>
		        <groupId>org.apache.maven.surefire</groupId>
		        <artifactId>surefire-junit47</artifactId>
		        <version>2.22.0</version>
		      </dependency>
		    </dependencies>
		  </plugin>

		</plugins>
	</build>
</project>
